force-app/main/default/objects/Test__c/fields/Base_Layer__c.field-meta.xml
<CustomField>
    <fullName>Base_Layer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>baselayer</description>
    <label>Base Layer</label>
    <type>Checkbox</type>
</CustomField>