force-app/main/default/objects/Test__c/fields/Jack__c.field-meta.xml
<CustomField>
    <fullName>Jack__c</fullName>
    <defaultValue>false</defaultValue>
    <description>test</description>
    <inlineHelpText>test</inlineHelpText>
    <label>Jack</label>
    <type>Checkbox</type>
</CustomField>