force-app/main/default/objects/Test__c/fields/Meme_Generator__c.field-meta.xml
<CustomField>
    <fullName>Meme_Generator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Test</description>
    <inlineHelpText>Test</inlineHelpText>
    <label>Meme Generator</label>
    <type>Checkbox</type>
</CustomField>